cowboysysop.yaml
apiVersion: v1
kind: Service
metadata:
  name: cowboysysop
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
