ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: cowboysysop.com
    http:
      paths:
      - pathType: Prefix
        path: /cowboysysop
        backend:
          service:
            name: servicea
            port:
              number: 80
  - host: whoami.com
    http:
      paths:
      - pathType: Prefix
        path: /whoami
        backend:
          service:
            name: serviceb
            port:
              number: 443
